<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GPS Keeper 2</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Start activity</string>
    <string name="title_section2">My routes</string>
    <string name="title_section3">My activities</string>
    <string name="title_section4">Configuration</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="config_fragment">Configuration</string>
    <string name="ruta">Route</string>
    <string name="sinruta">Without selected route</string>
    <string name="emptylistroutes">Without routes, to add one tap the + button</string>
    <string name="emptylistactivities">Without activities, make a activity and at the end you can check here</string>
    <string name="seleccionarfichero">Select file</string>
    <string name="descargardeinternet">Indicate the web</string>
    <string name="indiqueurl">Indicate the web before to tap the button.</string>
    <string name="descargando">Downloading route</string>
    <string name="espere">Wait please</string>
    <string name="buscandoruas">Searching routes</string>
    <string name="rutasencontradas">Select a route to import</string>
    <string name="rutasnoencontradas">No routes found, remember to be .kml files</string>
    <string name="si">Acept</string>
    <string name="no">Cancel</string>
    <string name="distancia">Distance</string>
    <string name="rutaguardada">Route save successfully</string>
    <string name="comenzar">Start activity</string>
    <string name="velocidad">Speed</string>
    <string name="paso">Pace</string>
    <string name="tiempo">Time</string>
    <string name="tiempopausa">Pause</string>
    <string name="mindistanciaaruta">Sorry, to start activity you should be whitin 1km of it.</string>
    <string name="filelabel">File GPS Keeper</string>
    <string name="borrarruta">Delete route</string>
    <string name="borrarrutaconfirm">Are you sure you want to delete the route? Remember that all activities of the route will be deleted.</string>
    <string name="rutaborrada">Deleted route</string>
    <string name="confirmterminaruta">Are you sure you finish the activity? Remember that if you pause, you should stop the activity.</string>
    <string name="rutainiciada">With the activity going, you can not navigate the application</string>
    <string name="confirmarborraractividad">Are you sure you want to delete the activity?</string>
    <string name="definirumbraldistancia">The application notifies you when you leave the route. Enter the distance you want to be warned, in meters.</string>
    <string name="definirnumavisos">Indicates the number of messages you want to receive.</string>
    <string name="guardar">Save</string>
    <string name="cancel">Cancel</string>
    <string name="guardarok">Settings saved successfully</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to show your current location on the map.</string>
    <string name="permission_rationale_accessfiles">Access to files is required to import your routes.</string>


    <string name="permission_denied">This app requires permission. Please try again and grant access to use the app.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'GPS Keeper\'.</string>
    <string name="permission_required">This permission is required for this app.</string>


    <string name="title_activity_init">GPS Keeper</string>
    <string name="mydatas">My stats</string>
    <string name="kmsthismonth"> kms this month</string>
    <string name="kmsalltime"> kms all time</string>
    <string name="timethismonth"> time this month</string>
    <string name="timealltime"> time all time</string>
    <string name="activitiesthismonth"> activities this month of</string>
    <string name="numroutes"> num of routes</string>


    <string name="rutanoencontrada">The route not found</string>
    <string name="activitynoencontrada">The activity not found</string>
    <string name="stop">Stop and finish</string>
    <string name="borraractividad">Delete the activity?</string>
    <string name="actividadborrada">Deleted activity</string>
    <string name="location_permission_denied">This application requires location permission to enable the \'my position\' layer. Please try again and grant access to use the location. If the permission has been permanently denied, it can be enabled from System Settings > Applications > \'GPS Keeper\'.</string>
    <string name="permission_required_toast">Se necesita el permiso de ubicación para este aplicación</string>
    <string name="fueraruta">You are out of the way</string>


    <string name="metrics_distance_km" translatable="false">km</string>
    <string name="metrics_distance_mi" translatable="false">mi</string>
    <string name="metrics_distance_m" translatable="false">m</string>
    <string name="metrics_elapsed_h" translatable="false">h</string>
    <string name="metrics_elapsed_m" translatable="false">m</string>
    <string name="metrics_elapsed_min" translatable="false">min</string>
    <string name="metrics_elapsed_s" translatable="false">s</string>
    <string name="metrics_heartrate" translatable="false">HR</string>

    <string name="service_msg">Tracking, tap to cancel</string>
</resources>