<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="navdev.gpstrack.fragment.RoutedetailsFragment"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/defaultbg"
        android:orientation="vertical">







        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/map" tools:context=".MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="center_horizontal|top"
            android:orientation="vertical"
            android:id="@+id/linearLayout">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textSize="14sp"
                    android:id="@+id/route_name"/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:paddingRight="10dp"
                    android:textColor="@color/defaultlighttext"
                    android:text="@string/distancia"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:id="@+id/route_distancia"
                    android:textColor="@color/defaulttext"
                    android:text="@string/sinruta"/>
            </LinearLayout>


        </LinearLayout>

        <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fabsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:baselineAlignBottom="@id/linearLayout"
        fab:fab_type="mini"
        android:src="@drawable/ic_save_white_24dp"
        fab:fab_colorNormal="@color/bluedefault"
        fab:fab_colorPressed="@color/bluedarkdefault"
        fab:fab_colorRipple="@color/blueaccent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="-25dp" />

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/fabtrash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:baselineAlignBottom="@id/linearLayout"
            fab:fab_type="mini"
            android:src="@drawable/ic_delete_black_24dp"
            fab:fab_colorNormal="@color/defaultlighttext"
            fab:fab_colorPressed="@color/defaultlighttext"
            fab:fab_colorRipple="@color/defaultlighttext"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="65dp"
            android:layout_marginTop="-25dp"
            android:visibility="gone"/>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/separador"
            android:layout_width="wrap_content"
            android:background="@android:color/transparent"
            android:layout_height="1dp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/bluedefault"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/comenzar"
            android:clickable="true"
            android:id="@+id/btncomenzar"
            android:padding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</FrameLayout>
